Bug 1613367 - Set Cu.reportError message as from chrome context if innerWindowId is 0 r=baku

Differential Revision: https://phabricator.services.mozilla.com/D65952